cloudformation/exercises/input-parameters.yaml
# Parameters allow users to specify input
Parameters:
  InstanceTypeParameter:
    Type: String # What kind of input the user will pass
    Default: t2.micro # Default value if the user doesn't pass anything
    AllowedValues: # List of options the user can choose from
      - t2.micro
      - t2.small
      - t2.medium
      - m1.small
      - m1.large
    Description: Enter t2.micro, m1.small, or m1.large. Default is t2.micro.
  NameOfService:
    Type: String
    Description: The name of the service this stack is to be used for
  KeyName:
    # If you reference an AWS resource, CloudFormation will access that
    # resource and list the available options for the user
    Type: AWS::EC2::KeyPair::KeyName 
    Description: Name of EC2 login key

Mappings: 
  RegionMap:
    us-east-1: 
      "HVM64": "ami-0ff8a91507f77f867"
    us-west-1: 
      "HVM64": "ami-0bdb828fd58c52235"
    eu-west-1: 
      "HVM64": "ami-047bb4163c506cd98"
    ap-southeast-1: 
      "HVM64": "ami-08569b978cc4dfa10"
    ap-northeast-1: 
      "HVM64": "ami-06cd52961ce9f0d85"

Resources:
  MyInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceTypeParameter # Referencing Parameter above
      KeyName: !Ref KeyName # Referencing Parameter above
      ImageId: !FindInMap
        - RegionMap
        - !Ref AWS::Region
        - HVM64
      Tags:
      - Key: "Name"
        Value: !Ref NameOfService
      SecurityGroups:
      - !Ref VprofileSG

  VprofileSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow ssh & http from MyIP
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: <my-IP-address>
